--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,10 +1,53 @@
 @import "_variables.scss";
 
+html, body {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    height: 100%;
+    width: 100%;
+
+    overflow: hidden;
+
+    -webkit-font-smoothing: antialiased;
+}
+
+*,
+*::before,
+*::after {
+    user-select: none;
+}
+
+input, select, textarea {
+    -webkit-user-select: unset;
+    -moz-user-select: unset;
+    -ms-user-select: unset;
+    user-select: unset;
+}
+
 body {
     margin: 0;
     padding: 0;
 
+    color: #fff;
+
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 16px;
+
+    line-height: 1.5;
+
+    background: linear-gradient(190deg, #cc0000 0, #ee0000 50%, #ff6666 90%);
+}
+
+p, div, ul, li {
+    display: block;
+}
+
+ul, li {
+    list-style: none;
+
+    margin: 0;
+    padding: 0;
 }
