--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,64 @@
+html, body {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  -webkit-font-smoothing: antialiased; }
+
+*,
+*::before,
+*::after {
+  user-select: none; }
+
+input, select, textarea {
+  -webkit-user-select: unset;
+  -moz-user-select: unset;
+  -ms-user-select: unset;
+  user-select: unset; }
+
 body {
   margin: 0;
   padding: 0;
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
-  font-size: 16px; }
+  font-size: 16px;
+  line-height: 1.5;
+  background: linear-gradient(190deg, #cc0000 0, #ee0000 50%, #ff6666 90%); }
+
+p, div, ul, li {
+  display: block; }
+
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+nav ul li {
+  float: left; }
+  nav ul li a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 1em 2em; }
+
+section {
+  width: 100%;
+  min-width: 100vw;
+  height: 100%;
+  min-height: 100vh; }
+  section.opening h1 {
+    font-family: 'Flavors', cursive;
+    font-weight: normal;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto auto;
+    font-size: 7em;
+    height: 1.5em;
+    width: 100%;
+    text-align: center; }
