added some images

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -2,6 +2,10 @@
 
 nav {
     ul {
+        position: absolute;
+        top: 2em;
+        right: 5em;
+        
         li {
             float: left;
 
