--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -8,6 +8,30 @@ section {
     min-height: 100vh;
 
     &.opening {
+        img.menu {
+            display: block;
+            position: absolute;
+            bottom: 20%;
+            left: 20%;
+            width: 30%;
+        }
+
+        img.drink {
+            display: block;
+            position: absolute;
+            bottom: 15%;
+            left: 0;
+            width: 30%;
+        }
+
+        img.food-plate {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 60%;
+        }
+
         h1 {
             font-family: 'Flavors', cursive;
             font-weight: normal;
@@ -17,8 +41,6 @@ section {
             left: 0;
             right: 0;
             bottom: 0;
-
-            margin: auto auto;
 
             font-size: 7em;
 
