--- a/styles.css
+++ b/styles.css
@@ -36,19 +36,41 @@ ul, li {
   margin: 0;
   padding: 0; }
 
-nav ul li {
-  float: left; }
-  nav ul li a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    padding: 1em 2em; }
+nav ul {
+  position: absolute;
+  top: 2em;
+  right: 5em; }
+  nav ul li {
+    float: left; }
+    nav ul li a {
+      display: block;
+      color: #fff;
+      text-decoration: none;
+      padding: 1em 2em; }
 
 section {
   width: 100%;
   min-width: 100vw;
   height: 100%;
   min-height: 100vh; }
+  section.opening img.menu {
+    display: block;
+    position: absolute;
+    bottom: 20%;
+    left: 20%;
+    width: 30%; }
+  section.opening img.drink {
+    display: block;
+    position: absolute;
+    bottom: 15%;
+    left: 0;
+    width: 30%; }
+  section.opening img.food-plate {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 60%; }
   section.opening h1 {
     font-family: 'Flavors', cursive;
     font-weight: normal;
@@ -57,7 +79,6 @@ section {
     left: 0;
     right: 0;
     bottom: 0;
-    margin: auto auto;
     font-size: 7em;
     height: 1.5em;
     width: 100%;
